# PorUnaBandejaMasLimpia

backend/: core.py  mails.py  main.py  messages.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  MailAIApp.tsx  index.css
