[project]
name = "gmail-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "gmail>=0.6.3",
    "google>=3.0.0",
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.4.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google>=0.1.1",
    "langchain-google-community>=2.0.10",
    "langchain-openai>=0.3.33",
    "rich>=14.1.0",
    "uvicorn>=0.37.0",
]
